--- a/src/services/Untitled1.ipynb
+++ b/src/services/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "b794e43a-1683-4c90-a8a9-1fe0cd99f1a1",
    "metadata": {},
    "outputs": [
@@ -10,31 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting openpyxlNote: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
-      "     ---------------------------------------- 0.0/250.0 kB ? eta -:--:--\n",
-      "     - -------------------------------------- 10.2/250.0 kB ? eta -:--:--\n",
-      "     --- --------------------------------- 20.5/250.0 kB 217.9 kB/s eta 0:00:02\n",
-      "     --- --------------------------------- 20.5/250.0 kB 217.9 kB/s eta 0:00:02\n",
-      "     --- --------------------------------- 20.5/250.0 kB 217.9 kB/s eta 0:00:02\n",
-      "     --- --------------------------------- 20.5/250.0 kB 217.9 kB/s eta 0:00:02\n",
-      "     --- --------------------------------- 20.5/250.0 kB 217.9 kB/s eta 0:00:02\n",
-      "     --- --------------------------------- 20.5/250.0 kB 217.9 kB/s eta 0:00:02\n",
-      "     ---- --------------------------------- 30.7/250.0 kB 62.4 kB/s eta 0:00:04\n",
-      "     --------- --------------------------- 61.4/250.0 kB 142.2 kB/s eta 0:00:02\n",
-      "     ---------- -------------------------- 71.7/250.0 kB 151.3 kB/s eta 0:00:02\n",
-      "     ---------- -------------------------- 71.7/250.0 kB 151.3 kB/s eta 0:00:02\n",
-      "     ---------------- ------------------- 112.6/250.0 kB 198.4 kB/s eta 0:00:01\n",
-      "     ----------------- ------------------ 122.9/250.0 kB 205.9 kB/s eta 0:00:01\n",
-      "     ------------------------- ---------- 174.1/250.0 kB 262.1 kB/s eta 0:00:01\n",
-      "     ---------------------------- ------- 194.6/250.0 kB 274.3 kB/s eta 0:00:01\n",
-      "     -------------------------------- --- 225.3/250.0 kB 305.9 kB/s eta 0:00:01\n",
-      "     ------------------------------------ 250.0/250.0 kB 313.0 kB/s eta 0:00:00\n",
-      "Collecting et-xmlfile (from openpyxl)\n",
-      "  Downloading et_xmlfile-1.1.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: et-xmlfile, openpyxl\n",
-      "Successfully installed et-xmlfile-1.1.0 openpyxl-3.1.2\n"
+      "Requirement already satisfied: openpyxl in c:\\users\\knaga\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (3.1.2)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\knaga\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from openpyxl) (1.1.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -44,14 +22,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "bb8080b6-45ba-4c54-99f2-c01aec6f9450",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\knaga\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\openpyxl\\worksheet\\_reader.py:329: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "file_path = 'CTO NEW Study Tracking .xlsx'\n",
+    "file_path = 'C:\\\\Users\\\\knaga\\\\OneDrive\\\\Desktop\\\\CTO New Tracking\\\\cto\\\\src\\\\services\\\\CTO NEW Study Tracking.xlsx'\n",
+    "\n",
     "sheet_name = 'CTONewTracking'\n",
     "\n",
     "# Read the specified sheet from the Excel file\n",
@@ -60,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "42da773a-9ca8-49da-9eb0-64c8a63ab489",
    "metadata": {},
    "outputs": [
@@ -111,10 +99,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2023-12-01 00:00:00</td>\n",
+       "      <td>2023-12-01</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>64328</td>\n",
        "      <td>17644.0</td>\n",
@@ -135,10 +123,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023-11-30 00:00:00</td>\n",
+       "      <td>2023-11-30</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>64330</td>\n",
        "      <td>17730.0</td>\n",
@@ -159,10 +147,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023-11-29 00:00:00</td>\n",
+       "      <td>2023-11-29</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>2024-02-05 00:00:00</td>\n",
        "      <td>64322</td>\n",
        "      <td>NaN</td>\n",
@@ -183,10 +171,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2023-11-29 00:00:00</td>\n",
+       "      <td>2023-11-29</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>64327</td>\n",
        "      <td>NaN</td>\n",
@@ -207,10 +195,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2023-11-28 00:00:00</td>\n",
+       "      <td>2023-11-28</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>64323</td>\n",
        "      <td>17745.0</td>\n",
@@ -255,10 +243,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>574</th>\n",
-       "      <td>2021-09-10 00:00:00</td>\n",
+       "      <td>2021-09-10</td>\n",
        "      <td>2021-09-10</td>\n",
        "      <td>2022-11-21</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Award-01053</td>\n",
        "      <td>17649.0</td>\n",
@@ -279,10 +267,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>575</th>\n",
-       "      <td>2021-09-10 00:00:00</td>\n",
+       "      <td>2021-09-10</td>\n",
        "      <td>2021-09-10</td>\n",
        "      <td>2022-11-21</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Award-01053</td>\n",
        "      <td>17650.0</td>\n",
@@ -303,10 +291,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>576</th>\n",
-       "      <td>2021-02-17 00:00:00</td>\n",
+       "      <td>2021-02-17</td>\n",
        "      <td>2021-03-01</td>\n",
        "      <td>2022-11-21</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Award 01565</td>\n",
        "      <td>17630.0</td>\n",
@@ -327,10 +315,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>577</th>\n",
-       "      <td>2021-02-17 00:00:00</td>\n",
+       "      <td>2021-02-17</td>\n",
        "      <td>2021-03-01</td>\n",
        "      <td>2022-11-21</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Award-01464</td>\n",
        "      <td>17629.0</td>\n",
@@ -351,10 +339,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>578</th>\n",
-       "      <td>2019-07-19 00:00:00</td>\n",
+       "      <td>2019-07-19</td>\n",
        "      <td>2019-07-15</td>\n",
        "      <td>2023-08-22</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Award-01570</td>\n",
        "      <td>17539.0</td>\n",
@@ -379,20 +367,20 @@
        "</div>"
       ],
       "text/plain": [
-       "       Orig. Submit Date IRB Submit Date Pause Date Restart Date  \\\n",
-       "0    2023-12-01 00:00:00             NaT        NaT          NaN   \n",
-       "1    2023-11-30 00:00:00             NaT        NaT          NaN   \n",
-       "2    2023-11-29 00:00:00             NaT        NaT          NaN   \n",
-       "3    2023-11-29 00:00:00             NaT        NaT          NaN   \n",
-       "4    2023-11-28 00:00:00             NaT        NaT          NaN   \n",
-       "..                   ...             ...        ...          ...   \n",
-       "574  2021-09-10 00:00:00      2021-09-10 2022-11-21          NaN   \n",
-       "575  2021-09-10 00:00:00      2021-09-10 2022-11-21          NaN   \n",
-       "576  2021-02-17 00:00:00      2021-03-01 2022-11-21          NaN   \n",
-       "577  2021-02-17 00:00:00      2021-03-01 2022-11-21          NaN   \n",
-       "578  2019-07-19 00:00:00      2019-07-15 2023-08-22          NaN   \n",
+       "    Orig. Submit Date IRB Submit Date Pause Date Restart Date  \\\n",
+       "0          2023-12-01             NaT        NaT          NaT   \n",
+       "1          2023-11-30             NaT        NaT          NaT   \n",
+       "2          2023-11-29             NaT        NaT          NaT   \n",
+       "3          2023-11-29             NaT        NaT          NaT   \n",
+       "4          2023-11-28             NaT        NaT          NaT   \n",
+       "..                ...             ...        ...          ...   \n",
+       "574        2021-09-10      2021-09-10 2022-11-21          NaT   \n",
+       "575        2021-09-10      2021-09-10 2022-11-21          NaT   \n",
+       "576        2021-02-17      2021-03-01 2022-11-21          NaT   \n",
+       "577        2021-02-17      2021-03-01 2022-11-21          NaT   \n",
+       "578        2019-07-19      2019-07-15 2023-08-22          NaT   \n",
        "\n",
-       "         Est. Start Date       eRS/WD     IRB           PI      SC       Dept  \\\n",
+       "         Est. Start Date       eRS/WD      IRB          PI        SC     Dept  \\\n",
        "0                    NaN        64328  17644.0      Mwangi   M. Graf     Pulm   \n",
        "1                    NaN        64330  17730.0  Mikhalkova  M. Lesko   Cardio   \n",
        "2    2024-02-05 00:00:00        64322      NaN    Muzaffar  L. Weber    Radio   \n",
@@ -460,7 +448,7 @@
        "[579 rows x 64 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "97b7cc94-94ed-46dd-b02f-e407715200f9",
    "metadata": {},
    "outputs": [
@@ -481,7 +469,7 @@
        "3"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,6 +486,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "42ff48a4-024b-46e9-b5a2-c78ed4fbf48d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e3cb9ff-48f9-41be-b558-58c2fd30b8bf",
    "metadata": {},
    "outputs": [],
    "source": []
